mpileup: update test data
and change output label

--- a/tool_collections/samtools/samtools_mpileup/test-data/mpileup.out.4
+++ b/tool_collections/samtools/samtools_mpileup/test-data/mpileup.out.4
@@ -3121,39 +3121,39 @@
 17	3121	A	13	,,.,.,,.,.,,^].	EDHGGFFC2E@1B	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
 17	3122	C	13	,,.,.,,.,.,,.	JJIJJMJH:GHFD	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
 17	3123	T	13	,,.,.,,.,.,,.	EFLGJGEH>JGEH	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3124	C	13	,,.,.,,.,.,,.	IIKKlJJJLILJE	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3125	T	13	,,.,.,,.,.,,.	FFMIlGBDGHJIH	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3126	G	13	,,.,.,,.,.,,.	HHLDoJJF>JEAH	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3127	C	13	,,.,.,,.,.,,.	GIKKqKKEGJJCG	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3128	T	13	,,.,.,,.,.,,.	>FKElGIACJBII	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3129	T	13	,$,.,.,,.,.,,.	;FFHdGID5EEDD	5,5,0,1,0,0,0,0,1,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
-17	3130	T	12	,.,.,,.,.,,.	EHHfGHDGE;EE	5,0,1,0,0,0,0,1,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
-17	3131	C	12	,.,.,,.,.,,.	HIJrJJEBJLFI	5,0,1,0,0,0,0,1,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
-17	3132	T	12	,.,.,,.,.,,.	EIGoGH>GKIFH	5,0,1,0,0,0,0,1,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
-17	3133	G	12	,.,.,,.,.,,.	DHHrHHCDJLDH	5,0,1,0,0,0,0,1,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
-17	3134	G	13	,.,.,,.,.,,.^].	DEGgIH8?ELCA>	5,0,1,0,0,0,0,1,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37
-17	3135	G	14	,.,.,,.,.,,..^],	CBHqJJE7?KGH>E	5,0,1,0,0,0,0,1,0,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3136	C	14	,$.,.,,.,.,,..,	?FIpJIG<DBEJFF	5,0,1,0,0,0,0,1,0,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3137	A	14	.$,.,,.,.,,..,^].	>EgFFGIJI@DEB?	0,1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3138	A	13	,.,,.,.,,..,.	EhED6>EG;DD;B	1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3139	C	13	,.,,.,.,,..,.	BtFF:CHJBEFGE	1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3140	C	13	,.,,.,.,,..,.	ApHJJIKJ?FFBA	1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3141	C	13	,.,,.,.,,..,.	GrJIIEFLEIGGE	1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3142	A	13	,.,,.,.,,..,.	HrJGE<JBJHGHE	1,0,0,0,0,1,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3143	G	14	,$.,,.,.,,..,.^>.	BuIGLBM=HIIGBA	1,0,0,0,0,1,0,0,0,0,0,0,0,12	37,37,37,37,37,37,37,37,37,37,37,37,37,29
-17	3144	C	14	.,,.,.,,..,..^].	qJJ?HDMJDHKG.A	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3145	A	14	.,,.,.,,..,...	iHIGMJM<AGIF<D	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3146	G	14	.,,.,.,,..,...	qHHGEMBCKJHH=H	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3147	G	13	.,,.,.,,..,..	kII8JEJHIGH8D	0,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
-17	3148	T	14	.,,.,.,,..,...	jHFBE>GC<AFB.D	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3149	G	14	.,,.,.,,..,...	rIJILEKE<JJDHH	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3150	A	14	.,,.,.,,..,...	kEH@?CHA5EBFFG	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3151	C	14	.,,.,.,,..,...	mIAG:AKJIHHI8G	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3152	C	14	.,,.,.,,..,...	lHI2@HFKJHEDBG	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3153	C	14	.,,.,.,,..,...	pKKEIALG;FBG@G	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3154	T	14	.,,.,.,,..,...	eHGGJDK:JHIB>I	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3155	G	14	.,,.,.,,..,...	kHIIMBJ=KIGJIK	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
-17	3156	G	14	.$,,.,.,,..,...	jJJHHFLBEHJE<I	0,0,0,0,1,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3124	C	13	,,.,,,.,.,,.^],	IIKKJJJLILJEl	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3125	T	13	,,.,,,.,.,,.,	FFMIGBDGHJIHl	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3126	G	13	,,.,,,.,.,,.,	HHLDJJF>JEAHo	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3127	C	13	,,.,,,.,.,,.,	GIKKKKEGJJCGq	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3128	T	13	,,.,,,.,.,,.,	>FKEGIACJBIIl	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3129	T	13	,$,.,,,.,.,,.,	;FFHGID5EEDDd	5,5,0,1,0,0,0,1,0,0,0,0,0	25,25,37,37,37,37,37,37,37,37,37,37,37
+17	3130	T	12	,.,,,.,.,,.,	EHHGHDGE;EEf	5,0,1,0,0,0,1,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
+17	3131	C	12	,.,,,.,.,,.,	HIJJJEBJLFIr	5,0,1,0,0,0,1,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
+17	3132	T	12	,.,,,.,.,,.,	EIGGH>GKIFHo	5,0,1,0,0,0,1,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
+17	3133	G	12	,.,,,.,.,,.,	DHHHHCDJLDHr	5,0,1,0,0,0,1,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37
+17	3134	G	13	,.,,,.,.,,.,^].	DEGIH8?ELCAg>	5,0,1,0,0,0,1,0,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37
+17	3135	G	14	,.,,,.,.,,.,.^],	CBHJJE7?KGHq>E	5,0,1,0,0,0,1,0,0,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3136	C	14	,$.,,,.,.,,.,.,	?FIJIG<DBEJpFF	5,0,1,0,0,0,1,0,0,0,0,0,0,0	25,37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3137	A	14	.$,,,.,.,,.,.,^].	>EFFGIJI@DgEB?	0,1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3138	A	13	,,,.,.,,.,.,.	EED6>EG;DhD;B	1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3139	C	13	,,,.,.,,.,.,.	BFF:CHJBEtFGE	1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3140	C	13	,,,.,.,,.,.,.	AHJJIKJ?FpFBA	1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3141	C	13	,,,.,.,,.,.,.	GJIIEFLEIrGGE	1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3142	A	13	,,,.,.,,.,.,.	HJGE<JBJHrGHE	1,0,0,0,1,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3143	G	14	,$,,.,.,,.,.,.^>.	BIGLBM=HIuIGBA	1,0,0,0,1,0,0,0,0,0,0,0,0,12	37,37,37,37,37,37,37,37,37,37,37,37,37,29
+17	3144	C	14	,,.,.,,.,.,..^].	JJ?HDMJDqHKG.A	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3145	A	14	,,.,.,,.,.,...	HIGMJM<AiGIF<D	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3146	G	14	,,.,.,,.,.,...	HHGEMBCKqJHH=H	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3147	G	13	,,.,.,,.,.,..	II8JEJHIkGH8D	0,0,0,1,0,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
+17	3148	T	14	,,.,.,,.,.,...	HFBE>GC<jAFB.D	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3149	G	14	,,.,.,,.,.,...	IJILEKE<rJJDHH	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3150	A	14	,,.,.,,.,.,...	EH@?CHA5kEBFFG	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3151	C	14	,,.,.,,.,.,...	IAG:AKJImHHI8G	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3152	C	14	,,.,.,,.,.,...	HI2@HFKJlHEDBG	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3153	C	14	,,.,.,,.,.,...	KKEIALG;pFBG@G	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3154	T	14	,,.,.,,.,.,...	HGGJDK:JeHIB>I	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3155	G	14	,,.,.,,.,.,...	HIIMBJ=KkIGJIK	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
+17	3156	G	14	,,.,.,,.,.,...	JJHHFLBEjHJE<I	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
 17	3157	A	14	,,.,.,,.,.,...	EFGCDFDBGFGFHG	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
 17	3158	A	14	,,.,.,,.,.,...	FHIECHA3IIHB3E	0,0,0,1,0,0,0,0,0,0,0,0,12,0	37,37,37,37,37,37,37,37,37,37,37,37,29,37
 17	3159	T	13	,,.,.,,.,.,..	FH=8BKIFFGHHG	0,0,0,1,0,0,0,0,0,0,0,0,0	37,37,37,37,37,37,37,37,37,37,37,37,37
@@ -3483,50 +3483,50 @@
 17	3483	G	11	.,$,,...,,..	K>6AIK:E:JK	0,1,10,0,0,0,8,1,1,12,0	37,37,29,37,37,37,29,37,37,29,37
 17	3484	A	10	.,...,,..^].	I?FKCD2GFD	0,0,0,0,8,1,1,12,0,0	37,37,37,37,29,37,37,29,37,37
 17	3485	C	11	.,,...,,...	CFKFJJIGHIC	0,10,0,0,0,8,1,1,12,0,0	37,29,37,37,37,29,37,37,29,37,37
-17	3486	T	10	.,,...,...	K@GYMCGIKH	0,10,0,0,0,8,1,12,0,0	37,29,37,37,37,29,37,29,37,37
-17	3487	C	11	.,,...,,...	D2;kLCACIJH	0,10,0,0,0,8,1,1,12,0,0	37,29,37,37,37,29,37,37,29,37,37
-17	3488	T	11	.,,...,,...	IEA^L=E;HLI	0,10,0,0,0,8,1,1,12,0,0	37,29,37,37,37,29,37,37,29,37,37
-17	3489	G	12	.,,...,,...,	K9:nLEE7HLJC	0,10,0,0,0,8,1,1,12,0,0,2	37,29,37,37,37,29,37,37,29,37,37,29
-17	3490	T	13	.,,...,,...,^].	D/JYJIEAFGGC:	0,10,0,0,0,8,1,1,12,0,0,2,1	37,29,37,37,37,29,37,37,29,37,37,29,37
-17	3491	C	14	.,,...,,....,^],	I>EeL:J1IKHC7C	0,10,0,0,0,8,1,1,12,0,0,1,0,1	37,29,37,37,37,29,37,37,29,37,37,37,37,37
-17	3492	T	14	.,,...,,....,,	L/A]LF/.JKKE15	0,10,0,0,0,8,1,1,12,0,0,1,0,1	37,29,37,37,37,29,37,37,29,37,37,37,37,37
-17	3493	C	15	.,,...,-1a,...,+1a.,,	E3>cMK5;JLK9D5;	0,10,0,0,0,8,1,1,12,0,0,2,1,0,1	37,29,37,37,37,29,37,37,29,37,37,29,37,37,37
-17	3494	A	14	.,,...,....,,^],	ECHkKK@IIIC7=0	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3495	A	14	.,,...,....,,,	BFGlJ<EHIHD8C:	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3496	A	14	.,,...,....,,,	@CHmH4@IJIEEA;	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3497	A	14	.,,...,....,,,	?FIlJFEFIIGDA;	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3498	A	14	.,,...,....,,,	>DGkJB=IJJG=E<	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3499	A	14	.,,...,....,,,	>EIlJ@FGIHHHF<	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3500	A	14	.,,...,....,,,	=FHiJHDGIDH6D=	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3501	A	14	.,,...,....,,,	<FHmE=DGJKH?F9	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3502	A	14	.,,...,....,,,	<EIlIH7GHIIHE>	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3503	A	14	.,,...,....,,,	;FHlK=EFHJI>E?	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3504	A	14	.,,...,....,,,	;EImI4FJJJIDE@	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3505	A	14	.,,...,....,,,	;FGjJ5DFKJI?E?	0,10,0,0,0,8,1,12,0,0,1,0,1,0	37,29,37,37,37,29,37,29,37,37,37,37,37,37
-17	3506	A	12	.$,,..,...,,^].	:GI`;CIIIBC?	0,10,0,0,0,1,0,0,1,1,0,1	37,29,37,37,37,37,37,37,37,37,37,37
-17	3507	T	15	,,..,,..,.,,,.^],	FIg@HHCGIGDCG@>	10,0,0,0,1,1,0,0,2,1,0,1,0,1,1	29,37,37,37,37,37,37,37,29,37,37,37,37,37,37
-17	3508	C	16	,,..,,...,.,,,.,	JLr?IK0BKJHLIKCG	10,0,0,0,1,1,12,0,0,2,1,0,1,0,1,1	29,37,37,37,37,37,29,37,37,29,37,37,37,37,37,37
-17	3509	A	17	,,...,,.-1C..,.,,,.,	CHeE;FC>JH:HF;FCC	10,0,0,0,8,1,1,12,0,0,2,1,0,1,0,1,1	29,37,37,37,29,37,37,29,37,37,29,37,37,37,37,37,37
-17	3510	C	16	,,..A,,..,.,,,.,	JLkIIJHJJJEJJ:EH	10,0,0,0,8,1,1,0,0,2,1,0,1,0,1,1	29,37,37,37,29,37,37,37,37,29,37,37,37,37,37,37
-17	3511	A	17	,,...,,..,.,,,.,^].	DH\G2EAJI1H7FGA1B	10,0,0,0,8,1,1,0,0,2,1,0,1,0,1,1,2	29,37,37,37,29,37,37,37,37,29,37,37,37,37,37,37,37
-17	3512	C	17	,,..,,..,.,,,.,.,	HJoHHIFH6FBIHEGD=	10,0,0,0,1,1,0,0,2,1,0,1,0,1,1,2,1	29,37,37,37,37,37,37,37,29,37,37,37,37,37,37,37,37
-17	3513	C	18	,,..A,,..,.,,,.,.,	HKa@.JFJIAJ7KLDFDA	10,0,0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1	29,37,37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37
-17	3514	A	18	,,...,,..,.,,,.,.,	FIgJ;GDAJ8HAHIBFC@	10,0,0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1	29,37,37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37
-17	3515	T	19	,,...,,...,.,,,.,.,	FGiJIGG1GJ>H=GHDHF@	10,0,0,0,8,1,1,12,0,0,2,1,0,1,0,1,1,2,1	29,37,37,37,29,37,37,29,37,37,29,37,37,37,37,37,37,37,37
-17	3516	T	19	,,...,,....,,,.,.,^].	FGfGGHHDIIEIHJDGBD;	10,0,0,0,8,1,1,12,0,0,1,0,1,0,1,1,2,1,1	29,37,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37,37,37
-17	3517	T	20	,,...,,...,.,,,.,.,.	@GoHBHB>HI2EIGKDHA>;	10,0,0,0,8,1,1,12,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,37,29,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37
-17	3518	T	20	,,...,,...,.,,,.,.,.	EGkC<HFFBFJE5HJEHAF>	10,0,0,0,8,1,1,12,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,37,29,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37
-17	3519	G	20	,,...,,...,.,,,.,.,.	@HpI/IF1LH3ECIIGHIJF	10,0,0,0,8,1,1,12,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,37,29,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37
-17	3520	G	19	,$,..,,...,.,,,.,.,.	AFVBJI?GIKL=IJ6FEJC	10,0,0,0,1,1,12,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,37,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37
-17	3521	C	17	,..,,..,.,,,.,.,.	Fo?KIBGCJ@KNGGBJG	0,0,0,1,1,0,0,2,1,0,1,0,1,1,2,1,1	37,37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37
-17	3522	T	18	,$...,,..,.,,,.,.,.	>pH8HGFM3JJGJGFIAG	0,0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1,1	37,37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37,37
-17	3523	T	16	..,,.+1C..,.,,,,.,.	aAG=5IAGEGEIGDFD	0,0,1,1,12,0,0,2,1,0,1,0,1,2,1,1	37,37,37,37,29,37,37,29,37,37,37,37,37,37,37,37
-17	3524	C	16	..,,..,.,,,.,.,.	mFJJI@;IHKKIIBIG	0,0,1,1,0,0,2,1,0,1,0,1,1,2,1,1	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37
-17	3525	A	18	...,,..,.,,,.,.,.^].	lD4HHI9AIEGIFHGJFE	0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
-17	3526	G	17	..,,..,.,,,.,.,..	dCFJKILLAJEFHKIJE	0,0,1,1,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
-17	3527	A	18	...,,..,.,,,.,.,..	i13H?GEHHFIICHHHFE	0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
-17	3528	T	18	...,,..,.,,,.,.,..	f>ACCJJ<DIG2CEEEGF	0,0,8,1,1,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,29,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
-17	3529	T	17	.$.,,..,.,,,.,.,..	e@GG?7@DHGB8E=JEE	0,0,1,1,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
+17	3486	T	10	.,,..,...^],	K@GMCGIKHY	0,10,0,0,8,1,12,0,0,0	37,29,37,37,29,37,29,37,37,37
+17	3487	C	11	.,,..,,...,	D2;LCACIJHk	0,10,0,0,8,1,1,12,0,0,0	37,29,37,37,29,37,37,29,37,37,37
+17	3488	T	11	.,,..,,...,	IEAL=E;HLI^	0,10,0,0,8,1,1,12,0,0,0	37,29,37,37,29,37,37,29,37,37,37
+17	3489	G	12	.,,..,,...,,	K9:LEE7HLJnC	0,10,0,0,8,1,1,12,0,0,0,2	37,29,37,37,29,37,37,29,37,37,37,29
+17	3490	T	13	.,,..,,...,,^].	D/JJIEAFGGYC:	0,10,0,0,8,1,1,12,0,0,0,2,1	37,29,37,37,29,37,37,29,37,37,37,29,37
+17	3491	C	14	.,,..,,...,.,^],	I>EL:J1IKHeC7C	0,10,0,0,8,1,1,12,0,0,0,1,0,1	37,29,37,37,29,37,37,29,37,37,37,37,37,37
+17	3492	T	14	.,,..,,...,.,,	L/ALF/.JKK]E15	0,10,0,0,8,1,1,12,0,0,0,1,0,1	37,29,37,37,29,37,37,29,37,37,37,37,37,37
+17	3493	C	15	.,,..,-1a,...,,+1a.,,	E3>MK5;JLKc9D5;	0,10,0,0,8,1,1,12,0,0,0,2,1,0,1	37,29,37,37,29,37,37,29,37,37,37,29,37,37,37
+17	3494	A	14	.,,..,...,.,,^],	ECHKK@IIIkC7=0	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3495	A	14	.,,..,...,.,,,	BFGJ<EHIHlD8C:	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3496	A	14	.,,..,...,.,,,	@CHH4@IJImEEA;	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3497	A	14	.,,..,...,.,,,	?FIJFEFIIlGDA;	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3498	A	14	.,,..,...,.,,,	>DGJB=IJJkG=E<	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3499	A	14	.,,..,...,.,,,	>EIJ@FGIHlHHF<	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3500	A	14	.,,..,...,.,,,	=FHJHDGIDiH6D=	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3501	A	14	.,,..,...,.,,,	<FHE=DGJKmH?F9	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3502	A	14	.,,..,...,.,,,	<EIIH7GHIlIHE>	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3503	A	14	.,,..,...,.,,,	;FHK=EFHJlI>E?	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3504	A	14	.,,..,...,.,,,	;EII4FJJJmIDE@	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3505	A	14	.,,..,...,.,,,	;FGJ5DFKJjI?E?	0,10,0,0,8,1,12,0,0,0,1,0,1,0	37,29,37,37,29,37,29,37,37,37,37,37,37,37
+17	3506	A	12	.$,,.,..,.,,^].	:GI;CII`IBC?	0,10,0,0,1,0,0,0,1,1,0,1	37,29,37,37,37,37,37,37,37,37,37,37
+17	3507	T	15	,,.,,..,,.,,,.^],	FI@HHCGgIGDCG@>	10,0,0,1,1,0,0,0,2,1,0,1,0,1,1	29,37,37,37,37,37,37,37,29,37,37,37,37,37,37
+17	3508	C	16	,,.,,...,,.,,,.,	JL?IK0BKrJHLIKCG	10,0,0,1,1,12,0,0,0,2,1,0,1,0,1,1	29,37,37,37,37,29,37,37,37,29,37,37,37,37,37,37
+17	3509	A	17	,,..,,.-1C..,,.,,,.,	CHE;FC>JHe:HF;FCC	10,0,0,8,1,1,12,0,0,0,2,1,0,1,0,1,1	29,37,37,29,37,37,29,37,37,37,29,37,37,37,37,37,37
+17	3510	C	16	,,.A,,..,,.,,,.,	JLIIJHJJkJEJJ:EH	10,0,0,8,1,1,0,0,0,2,1,0,1,0,1,1	29,37,37,29,37,37,37,37,37,29,37,37,37,37,37,37
+17	3511	A	17	,,..,,..,,.,,,.,^].	DHG2EAJI\1H7FGA1B	10,0,0,8,1,1,0,0,0,2,1,0,1,0,1,1,2	29,37,37,29,37,37,37,37,37,29,37,37,37,37,37,37,37
+17	3512	C	17	,,.,,..,,.,,,.,.,	HJHHIFHo6FBIHEGD=	10,0,0,1,1,0,0,0,2,1,0,1,0,1,1,2,1	29,37,37,37,37,37,37,37,29,37,37,37,37,37,37,37,37
+17	3513	C	18	,,.A,,..,,.,,,.,.,	HK@.JFJIaAJ7KLDFDA	10,0,0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1	29,37,37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37
+17	3514	A	18	,,..,,..,,.,,,.,.,	FIJ;GDAJg8HAHIBFC@	10,0,0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1	29,37,37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37
+17	3515	T	19	,,..,,...,,.,,,.,.,	FGJIGG1GJi>H=GHDHF@	10,0,0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1	29,37,37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37
+17	3516	T	19	,,..,,...,.,,,.,.,^].	FGGGHHDIIfEIHJDGBD;	10,0,0,8,1,1,12,0,0,0,1,0,1,0,1,1,2,1,1	29,37,37,29,37,37,29,37,37,37,37,37,37,37,37,37,37,37,37
+17	3517	T	20	,,..,,...,,.,,,.,.,.	@GHBHB>HIo2EIGKDHA>;	10,0,0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3518	T	20	,,..,,...,,.,,,.,.,.	EGC<HFFBFkJE5HJEHAF>	10,0,0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3519	G	20	,,..,,...,,.,,,.,.,.	@HI/IF1LHp3ECIIGHIJF	10,0,0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3520	G	19	,$,.,,...,,.,,,.,.,.	AFBJI?GIVKL=IJ6FEJC	10,0,0,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1	29,37,37,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3521	C	17	,.,,..,,.,,,.,.,.	F?KIBGoCJ@KNGGBJG	0,0,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1	37,37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3522	T	18	,$..,,..,,.,,,.,.,.	>H8HGFMp3JJGJGFIAG	0,0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1	37,37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3523	T	16	.,,.+1C..,,.,,,,.,.	AG=5IAaGEGEIGDFD	0,1,1,12,0,0,0,2,1,0,1,0,1,2,1,1	37,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37
+17	3524	C	16	.,,..,,.,,,.,.,.	FJJI@m;IHKKIIBIG	0,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37
+17	3525	A	18	..,,..,,.,,,.,.,.^].	D4HHI9lAIEGIFHGJFE	0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
+17	3526	G	17	.,,..,,.,,,.,.,..	CFJKIdLLAJEFHKIJE	0,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
+17	3527	A	18	..,,..,,.,,,.,.,..	13H?GEiHHFIICHHHFE	0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
+17	3528	T	18	..,,..,,.,,,.,.,..	>ACCJJf<DIG2CEEEGF	0,8,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,29,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
+17	3529	T	17	.,,..,,.,,,.,.,..	@GG?7e@DHGB8E=JEE	0,1,1,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,37,37,37,37,29,37,37,37,37,37,37,37,37,37,37
 17	3530	G	18	.,,*..,,.,,,.,.,..	HIJ/CKJLEII6FI8KJJ	0,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37,37
 17	3531	C	19	.A,,...,,.,,,.,.,..	3GII/LLI<KGJFFIDJIJ	0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37,37
 17	3532	A	19	..,,...,,.,,,.,.,..	C1FC<FGHJJIGJGIDHFG	0,8,1,1,12,0,0,0,2,1,0,1,0,1,1,2,1,1,0	37,29,37,37,29,37,37,37,29,37,37,37,37,37,37,37,37,37,37
